--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>My Raspberrry PIIIIE server</title>
   </head>
   <body>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <p>Hello, World!</p>
   </body>
 </html>
