--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <title>My Raspberrry PIIIIE server</title>
   </head>
   <body>
+    <center>
+    <form action="handler.php">
+      <div class="mdl-textfield mdl-js-textfield" method="post">
+        <textarea class="mdl-textfield__input" type="text" rows= "3" id="sample5" name="x"></textarea>
+        <label class="mdl-textfield__label" for="sample5">Text lines...</label>
+      </div>
+    
+    
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <h1>Click On Button Below!!!</h1>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
       CLICK ON ME!!!
     </button>
+    </form>
+    </center>
   </body>
 </html>
