--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
   </head>
   <body>
     <center>
-    <form action="handler.php">
-      <div class="mdl-textfield mdl-js-textfield" method="post">
-        <textarea class="mdl-textfield__input" type="text" rows= "3" id="sample5" name="x"></textarea>
-        <label class="mdl-textfield__label" for="sample5">Text lines...</label>
-      </div>
-    
-    
+      <form action="hander.php" method="post">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" id="sample3" name="x">
+          <label class="mdl-textfield__label" for="sample3">Text...</label>
+        </div>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <h1>Click On Button Below!!!</h1>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
       CLICK ON ME!!!
     </button>
     </form>
+    <img src="https://cdn1.vectorstock.com/i/1000x1000/90/55/threatening-emoticon-vector-1069055.jpg">
     </center>
   </body>
 </html>
