--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <center>
-      <form action="hander.php" method="post">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <input class="mdl-textfield__input" type="text" id="sample3" name="x">
           <label class="mdl-textfield__label" for="sample3">Text...</label>
@@ -22,6 +21,7 @@
     <h1>Click On Button Below!!!</h1>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
       CLICK ON ME!!!
+      <form action="hander.php" method="post"></form>
     </button>
     </form>
     <img src="https://cdn1.vectorstock.com/i/1000x1000/90/55/threatening-emoticon-vector-1069055.jpg">
