--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input class="mdl-textfield__input" type="text" id="sample3" name="x">
       <label class="mdl-textfield__label" for="sample3">Text...</label>
     </div>
-    <form action="handler.php" method="post"></form>
+    <form action="handler.php" method="post">
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
       CLICK ON ME!!!
     </button>
